# telemonit

./: .env.example  .gitignore  PLANO.md  README.md  pyproject.toml  requirements.txt
lembretes/: lembrete_09h.bat  lembrete_13h.bat  lembrete_17h.bat  limpar_lembretes.bat
telemonit/: __init__.py  config.py  drive_resolver.py  event_log.py  excepthook.py  notificar.py  observability.py  telegram_client.py  terminal.py  throttle.py
tests/: test_config.py  test_drive_resolver.py  test_event_log.py  test_event_log_fallback.py  test_excepthook.py  test_fallback_log.py  test_notificar.py  test_observability.py  test_run_id.py  test_telegram_client.py  test_terminal.py  test_throttle.py
